--- a/components/globals.css
+++ b/components/globals.css
@@ -66,7 +66,7 @@
     --accent-foreground: oklch(1.000 0.000 0.000);
     --destructive: oklch(0.704 0.191 22.216);
     --border: oklch(0.235 0.004 286.099);
-    --input: oklch(0.235 0.004 286.099);
+    --input: oklch(0.270 0.004 286.099);
     --ring: oklch(0.522 0.177 255.830);
 
     --sidebar: oklch(0.175 0.004 286.099);
